src/objects/Customer_Config__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Configs</relationshipLabel>
        <relationshipName>User_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Json_Config__c</fullName>
        <label>Json Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sort Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Config</label>
        <referenceTo>Customer_Config__c</referenceTo>
        <relationshipLabel>User Configs</relationshipLabel>
        <relationshipName>User_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Module__c</fullName>
        <defaultValue>&quot;JO User&quot;</defaultValue>
        <label>User Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JO User</fullName>
                </value>
                <value>
                    <fullName>Petition User</fullName>
                </value>
                <value>
                    <fullName>Report User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Name__c</fullName>
        <label>View Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>User Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>View_Name__c</columns>
        <columns>User_Config__c</columns>
        <columns>Job_Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Json_Config__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Admin__c</columns>
        <columns>Is_Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JO_Admin</fullName>
        <columns>NAME</columns>
        <columns>View_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>User_Config__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Admin__c</columns>
        <columns>Is_Default__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Config__c.JO_Admin_Views</value>
        </filters>
        <label>JO Admin</label>
    </listViews>
    <listViews>
        <fullName>JO_Alerts</fullName>
        <columns>NAME</columns>
        <columns>Job_Owner__c</columns>
        <columns>User_Config__c</columns>
        <columns>Is_Active__c</columns>
        <columns>View_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Config__c.JO_Alert</value>
        </filters>
        <label>JO Alerts</label>
    </listViews>
    <listViews>
        <fullName>JO_Charts</fullName>
        <columns>NAME</columns>
        <columns>Job_Owner__c</columns>
        <columns>User_Config__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Json_Config__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Config__c.Chart_Config</value>
        </filters>
        <label>JO Charts</label>
    </listViews>
    <listViews>
        <fullName>JO_Dashboard_Defaults</fullName>
        <columns>NAME</columns>
        <columns>View_Name__c</columns>
        <columns>Job_Owner__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Admin__c</columns>
        <columns>Is_Default__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Config__c.JO_Dashboard</value>
        </filters>
        <filters>
            <field>View_Name__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <label>JO Dashboard Defaults</label>
    </listViews>
    <listViews>
        <fullName>JO_Dashboards</fullName>
        <columns>NAME</columns>
        <columns>View_Name__c</columns>
        <columns>Json_Config__c</columns>
        <columns>Job_Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Admin__c</columns>
        <columns>Is_Default__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Config__c.JO_Dashboard</value>
        </filters>
        <filters>
            <field>View_Name__c</field>
            <operation>notEqual</operation>
            <value>Default</value>
        </filters>
        <label>JO Dashboards</label>
    </listViews>
    <listViews>
        <fullName>Jo_Portfolio</fullName>
        <columns>NAME</columns>
        <columns>View_Name__c</columns>
        <columns>Job_Owner__c</columns>
        <columns>User_Config__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Admin__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Is_Default__c</columns>
        <columns>Json_Config__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Config__c.JO_Portfolio</value>
        </filters>
        <label>JO Portfolio</label>
    </listViews>
    <nameField>
        <displayFormat>UC{000000}</displayFormat>
        <label>User Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Configs</pluralLabel>
    <recordTypes>
        <fullName>Chart_Config</fullName>
        <active>true</active>
        <description>Saves configuration related to JO Dashboard Chart</description>
        <label>JO Chart</label>
    </recordTypes>
    <recordTypes>
        <fullName>JO_Admin_Views</fullName>
        <active>true</active>
        <description>Used in saving admin configuration for views</description>
        <label>JO Admin Views</label>
    </recordTypes>
    <recordTypes>
        <fullName>JO_Alert</fullName>
        <active>true</active>
        <label>JO Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>JO_Dashboard</fullName>
        <active>true</active>
        <label>JO Dashboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>JO_Portfolio</fullName>
        <active>true</active>
        <label>JO Portfolio</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>